# UAP_Machine_Learning_A_Muhammad_Wildan_Nabila_202210370311252

./: README.md  pyproject.toml
sawit_models/: class_names.json  model_base_cnn.keras
src/: app.py
