[project]
name = "demo_uap_ml"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "muhammadwildannabila", email = "abilwildannabila2003@gmail.com"},
]
dependencies = ["streamlit>=1.52.2", "tensorflow>=2.20.0", "numpy>=2.2.6", "pillow>=12.0.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
